--- a/views/layouts/admin.ejs
+++ b/views/layouts/admin.ejs
@@ -17,7 +17,7 @@
     <main class="main">
       <%- body %>
     </main>
-     <%- include('../partials/Footer.ejs') %>
+     <%- include('../partials/footer.ejs') %>
   </div>
 
 </body>
