--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -14,7 +14,7 @@
     <main class="main">
       <%- body %>
     </main>
-     <%- include('../partials/Footer.ejs') %>
+     <%- include('../partials/footer.ejs') %>
   </div>
 
 </body>
