Added eye button for passwords

--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -5,9 +5,15 @@
     <input type="text" name="username" id="" placeholder="Enter Username" style="padding:10px;">
 
     <label for="password"><b>Password</b></label>
-    <input type="password" name="password" id="" placeholder="Enter Password" style="padding:10px;">
-
-   <input type="submit" value="Login" class="btn" style="background-color: #00ADB5; color: #121212; border-radius: 10px; font-weight: 600;">
+    <div class="eyebutton" style="display: flex; align-items: stretch;">
+        <input type="password" name="password" id="passwordInput" placeholder="Enter Password" style="padding:10px;">
+        <div id="togglePassword"
+            style="width:20px; height: 26px; background-color: white; padding:10px; border-radius: 6px; border:1px solid black; cursor: pointer;">
+            👁️
+        </div>
+    </div>
+    <input type="submit" value="Login" class="btn"
+        style="background-color: #00ADB5; color: #121212; border-radius: 10px; font-weight: 600;">
 
 </form>
 
@@ -19,8 +25,15 @@
     <input type="text" name="username" id="" placeholder="Enter Username" style="padding:10px;">
 
     <label for="password"><b>Password</b></label>
-    <input type="password" name="password" id="" placeholder="Enter Password" style="padding:10px;">
+    <div class="eyebutton" style="display: flex; align-items: stretch;">
+        <input type="password" name="password" id="passwordInput2" placeholder="Enter Password" style="padding:10px;">
+        <div id="togglePassword2"
+            style="width:20px; height: 26px; background-color: white; padding:10px; border-radius: 6px; border:1px solid black; cursor: pointer;">
+            👁️
+        </div>
+    </div>
 
-   <input type="submit" value="Register" class="btn"  style="background-color: #00ADB5; color: #121212;  border-radius: 10px; font-weight: 600;">
+    <input type="submit" value="Register" class="btn"
+        style="background-color: #00ADB5; color: #121212;  border-radius: 10px; font-weight: 600;">
 
 </form>
