--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <div class="author">
     <h1 class="author_heading">Hi, I am Sachin.</h1>
-    <p class="author_body">Web developer and CSE S.E. student</p>
+    <p class="author_body">Web developer and CE S.E. student</p>
 </div>
 
 
